@startuml
'https://plantuml.com/class-diagram

package Empresas/Organismos #back:lightcyan;line:skyblue;line.bold{
    class EntidadPropietaria{
        nombre:String
        organizaciones:List<Organizacion>
        serviciosTransporte: List<ServicioTransporte>
        responsable:AdminEntidadOrganismo
        suscriptores: List<Miembro>
        incidentesAbiertos: List<Incidente>

        notificarSuscriptores(): void
    }

    class RepoEntidadesPropietarias{
        instance: RepoEntidadesPropietarias
        entidadesPropietarias:List<EntidadPropietaria>

        getInstance(): RepoEntidadesPropietarias
        agregar(entidadPropietaria)
        getEntidadesPropietarias():List<EntidadPropietaria>
    }

    class OrganismoDeControl{
        nombre:String
        organizaciones:List<Organizacion>
        serviciosTransporte: List<ServicioTransporte>
        responsable:AdminEtnidadOrganismo
    }

    class RepoOrganismosDeControl{
        instance: RepoOrganismosDeControl
        organismosDeControl:List<OrganismoDeControl>

        getInstance(): RepoOrganismosDeControl
        agregar(organismoDeControl): void
    }

    RepoEntidadesPropietarias-->"*"EntidadPropietaria
    RepoOrganismosDeControl-->"*"OrganismoDeControl
}

@enduml